5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1758_762.log
== TEST (2019-05-23 11:42:18) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
n = array(int(input()))
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0:1],"de",mes[n[2:3]],"de",n[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:43:05) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
n = array(int(input()))
m = n[2:3]
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0:1],"de",mes[n[m]],"de",n[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:43:52) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
n = array(int(input()))
m = n[2:4]
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0:2],"de",mes[n[m]],"de",n[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:44:37) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
n = array(eval(input()))
m = n[2:4]
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0:2],"de",mes[n[m]],"de",n[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:44:57) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
n = array(eval(input()))
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0:2],"de",mes[2:4],"de",n[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:45:57) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
n = array(eval(input()))
m = int(n[2:4])
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0:2],"de",mes[2:4],"de",n[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:46:55) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
n = array(int(input()))
m = n[2:4]
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0:2],"de",mes[2:4],"de",n[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:47:00) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
n = array(int(input()))
m = n[2:4]
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0:2],"de",mes[2:4],"de",n[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:48:25) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
n = array(int(input()))
m = n[2]*10+n[3]
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0]*10+n[1],"de",m,"de",n[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:04:03) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
n = array(int(input()))
m = n[2]*10+n[3]
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0]*10+n[1],"de",m,"de",n[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:04:55) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
n = str(int(input()))
m = n[2]*10+n[3]
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0]*10+n[1],"de",m,"de",n[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:07:54) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
n = str(input())
n = list(map(int, n))
m = n[2]*10+n[3]
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0]*10+n[1],"de",m,"de",n[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:09:45) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
n = str(input())
n = list(map(int, n))
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0]*10+n[1],"de",mes[n],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:10:42) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
n = str(input())
n = list(map(int, n))
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0]*10+n[1],"de",mes[n[2:4]],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:19:05) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = list(map(int, input()))
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0]*10+n[1],"de",mes[int(n[2:4])],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:19:50) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = list(map(int, input()))
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0]*10+n[1],"de",mes[n[2]*10+n[3]-1],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:24:45) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = list(map(int, input()))
d = n[0:2]
m = n[2:4]
a = n[4:]
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(d),"de",mes[int(m)-1],"de",int(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:26:17) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = list(map(int, input()))
d = str(n[0:2])
m = str(n[2:4])
a = str(n[4:])
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(d),"de",mes[int(m)-1],"de",int(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:27:32) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = list(map(str, input()))
d = n[0:2]
m = n[2:4]
a = n[4:]
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(d),"de",mes[int(m)-1],"de",int(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:27:39) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = list(map(str, input()))
d = n[0:2]
m = n[2:4]
a = n[4:]
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(d),"de",mes[int(m)-1],"de",int(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:28:32) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
d = n[0:2]
m = n[2:4]
a = n[4:]
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(d),"de",mes[int(m)-1],"de",int(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:28:43) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
d = n[0:2]
m = n[2:4]
a = n[4:]
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(d),"de",mes[int(m)-1],"de",int(a))
-- EXECUTION TIME:
0.35839
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
7 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:29:01) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
d = n[0:2]
m = n[2:4]
a = n[4:]
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(d),"de",mes[int(m)-1],"de",int(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:29:15) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
d = n[0:2]
m = n[2:4]
a = n[4:]
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(d),"de",mes[int(m)-1],"de",int(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:29:49) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
d = n[0:2]
m = n[2:4]
a = n[4:]
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(n[0:2]),"de",mes[int(m)-1],"de",int(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:30:23) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(n[0:2]),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:30:51) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(n[0:2]),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:30:57) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(n[0:2]),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:31:00) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(n[0:2]),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:31:51) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(n[0:2]),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:31:59) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(n[0:2]),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:32:06) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(n[0:2]),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:32:14) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(n[0:2]),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:32:33) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0]*10+n[1]),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- ERROR:
File "XXXX", line 6
    print(n[0]*10+n[1]),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
                                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:33:01) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(n[0])*10+int(n[1])),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- ERROR:
File "XXXX", line 6
    print(int(n[0])*10+int(n[1])),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
                                                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:33:15) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(n[0])*10+int(n[1]),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:33:49) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(n[0:2]),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:33:55) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(n[0:2]),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:34:05) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(n[0:2]),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:34:14) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(n[0:2]),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:34:33) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(n[0:2]),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:34:51) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(int(n[0:2]),"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- EXECUTION TIME:
0.440974
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
7 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:19:06) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0]+n[1],"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:19:19) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
#n = str(input())
n = input()
mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
print(n[0]+n[1],"de",mes[int(n[2:4])-1],"de",int(n[4:]))
-- EXECUTION TIME:
0.545101
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
